attempt to stop horizontal scroll part 5

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,8 @@ body {
   font-size: 11pt;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  overscroll-behavior: none;
 }
 
 header {
